# camera

./: .gitignore  Cargo.toml  README.md  RELEASE.md  cargo-sources.json  justfile
.github/: APKBUILD.prebuilt.template  APKBUILD.template  FUNDING.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.apk
i18n/cs/: camera.ftl
i18n/en/: camera.ftl
i18n/fr/: camera.ftl
i18n/sv/: camera.ftl
i18n/zh-CN/: camera.ftl
resources/: io.github.cosmic_utils.camera.desktop  io.github.cosmic_utils.camera.metainfo.xml
src/: cli.rs  config.rs  main.rs  terminal.rs
src/app/: camera_ops.rs  dropdowns.rs  gallery_primitive.rs  mod.rs  state.rs  update.rs  video_primitive.rs  video_shader.wgsl  video_shader_blur.wgsl  video_shader_preblur.wgsl  view.rs
src/app/bottom_bar/: camera_switcher.rs  mode_switcher.rs
src/app/camera_preview/: widget.rs
src/app/composition_overlay/: mod.rs  widget.rs
src/app/controls/: capture_button.rs  recording_ui.rs
src/app/handlers/: camera.rs  capture.rs  format.rs  system.rs  ui.rs  virtual_camera.rs
src/app/settings/: view.rs
src/backends/camera/libcamera/: mod.rs
src/backends/camera/libcamera/native/: capture_thread.rs
src/backends/virtual_camera/: gpu_filter.rs
src/media/encoders/: video.rs
src/pipelines/video/: mod.rs  recorder.rs  timelapse.rs
src/shaders/: filter_compute.wgsl  filter_preblur_compute.wgsl  gpu_filter.rs
