[package]
name = "camera"
version = "0.1.23"
edition = "2024"
license = "GPL-3.0-only"
description = "Camera application for the COSMIC™ desktop"
repository = "https://github.com/cosmic-utils/camera"
authors = ["Frederic Laing <frederic.laing.development@gmail.com>"]

[dependencies]
futures = "0.3.32"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10.0"
open = "5.3.3"
pollster = "0.4.0"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
image = "0.25.9"
chrono = "0.4.44"
ctrlc = "3.5"
bytemuck = { version = "1.25.0", features = ["derive"] }
dirs = "6.0.0"
rqrr = "0.10.1"
rfd = "0.17"
zbus = "5.14.0"
uuid = { version = "1.22.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2.183"
dng = "1.5"
async-stream = "0.3"
# Native libcamera bindings for direct camera access (bypasses GStreamer)
libcamera = { git = "https://github.com/FreddyFunk/libcamera-rs.git", rev = "aaf51ee", features = ["vendored", "pkg-config", "pregenerated-bindings"] }
drm-fourcc = "2.2"
turbojpeg = { version = "1.3", default-features = false, features = ["cmake"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # XDG portal integration for Flatpak theme detection
    "xdg-portal",
]

[dev-dependencies]
naga = { version = "28.0.0", features = ["wgsl-in"] }
